--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 - 3.5
 install:
   - pip3 install azure-storage-blob
+  - docker login -u $REG_USER -p $REG_PASS $CONTAINERREGISTRY
+before_script: echo $REG_USER
 # Setup stages for the build
 jobs:
   include:
