--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,16 @@ language: python
 python:
 - 3.5
 install:
-  - echo "$REG_USER"
   - pip3 install azure-storage-blob
-  - docker login -u $REG_USER -p $REG_PASS iidbuildimagestest.azurecr.io
 # Setup stages for the build
 jobs:
   include:
     - stage: build
+      install: docker login -u $REG_USER -p $REG_PASS iidbuildimagestest.azurecr.io
       script: travis_wait 60 ./build.sh ~/docker_build.txt
     - stage: deploy  
       install: 
+        - docker login -u $REG_USER -p $REG_PASS iidbuildimagestest.azurecr.io
         - mkdir $HOME/azdis_ssl
         - openssl req -x509 -newkey rsa:2048 -keyout $HOME/azdis_ssl/azdis_private.rsa -out $HOME/azdis_ssl/azdis_public.crt -days 365 -nodes -subj "/CN=localhost"
       before_script:
